--- a/XYZReader/src/main/res/values/dimens.xml
+++ b/XYZReader/src/main/res/values/dimens.xml
@@ -8,4 +8,7 @@
     <dimen name="fab_press_translation_z">6dp</dimen>
     <dimen name="fab_margin">24dp</dimen>
 
+    <dimen name="app_bar_padding">50dp</dimen>
+    <dimen name="default_padding">4dp</dimen>
+    <dimen name="app_bar_elevation">8dp</dimen>
 </resources>
