--- a/XYZReader/src/main/res/layout/activity_article_list.xml
+++ b/XYZReader/src/main/res/layout/activity_article_list.xml
@@ -8,7 +8,7 @@
     <android.support.design.widget.AppBarLayout
         android:id="@+id/toolbar_container"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/app_bar_padding"
+        android:layout_height="?attr/actionBarSize"
         android:background="?colorPrimary"
         android:elevation="@dimen/app_bar_elevation">
 
